--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         <header>
             <h2>PayPhone Test</h2>
         </header>
-        <section>
+        <section id="content">
         </section>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@vue/composition-api@1.2.3"></script>
     <script src="./dist/main.js"></script>
 </body>
 </html>
